@@ -17,13 +17,15 @@
 package io.supertokens.storage.postgresql.queries;
 
 import io.supertokens.pluginInterface.RowMapper;
+import io.supertokens.pluginInterface.authRecipe.AuthRecipeUserInfo;
+import io.supertokens.pluginInterface.authRecipe.LoginMethod;
+import io.supertokens.pluginInterface.emailpassword.exceptions.UnknownUserIdException;
 import io.supertokens.pluginInterface.exceptions.StorageQueryException;
 import io.supertokens.pluginInterface.exceptions.StorageTransactionLogicException;
 import io.supertokens.pluginInterface.multitenancy.AppIdentifier;
 import io.supertokens.pluginInterface.multitenancy.TenantIdentifier;
 import io.supertokens.pluginInterface.passwordless.PasswordlessCode;
 import io.supertokens.pluginInterface.passwordless.PasswordlessDevice;
-import io.supertokens.pluginInterface.passwordless.UserInfo;
 import io.supertokens.pluginInterface.sqlStorage.SQLStorage.TransactionIsolationLevel;
 import io.supertokens.storage.postgresql.ConnectionPool;
 import io.supertokens.storage.postgresql.Start;
@@ -36,6 +38,7 @@ import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static io.supertokens.pluginInterface.RECIPE_ID.PASSWORDLESS;
 import static io.supertokens.storage.postgresql.QueryExecutorTemplate.execute;
@@ -55,7 +58,8 @@ public class PasswordlessQueries {
                 + "time_joined BIGINT NOT NULL, "
                 + "CONSTRAINT " + Utils.getConstraintName(schema, usersTable, "user_id", "fkey")
                 + " FOREIGN KEY(app_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +  " (app_id, user_id) ON DELETE CASCADE,"
+                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +
+                " (app_id, user_id) ON DELETE CASCADE,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, usersTable, null, "pkey")
                 + " PRIMARY KEY (app_id, user_id)"
                 + ");";
@@ -79,7 +83,8 @@ public class PasswordlessQueries {
                 + " PRIMARY KEY (app_id, tenant_id, user_id),"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, passwordlessUserToTenantTable, "user_id", "fkey")
                 + " FOREIGN KEY (app_id, tenant_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getUsersTable() + "(app_id, tenant_id, user_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getUsersTable() +
+                "(app_id, tenant_id, user_id) ON DELETE CASCADE"
                 + ");";
         // @formatter:on
     }
@@ -98,7 +103,7 @@ public class PasswordlessQueries {
                 + "failed_attempts INT NOT NULL,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, devicesTable, "tenant_id", "fkey")
                 + " FOREIGN KEY(app_id, tenant_id)"
-                + " REFERENCES " + Config.getConfig(start).getTenantsTable() +  " (app_id, tenant_id) ON DELETE CASCADE,"
+                + " REFERENCES " + Config.getConfig(start).getTenantsTable() + " (app_id, tenant_id) ON DELETE CASCADE,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, devicesTable, null, "pkey")
                 + " PRIMARY KEY (app_id, tenant_id, device_id_hash)"
                 + ");";
@@ -126,7 +131,8 @@ public class PasswordlessQueries {
                 + " PRIMARY KEY (app_id, tenant_id, code_id),"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, codesTable, "device_id_hash", "fkey")
                 + " FOREIGN KEY (app_id, tenant_id, device_id_hash)"
-                + " REFERENCES " + Config.getConfig(start).getPasswordlessDevicesTable() + "(app_id, tenant_id, device_id_hash)"
+                + " REFERENCES " + Config.getConfig(start).getPasswordlessDevicesTable() +
+                "(app_id, tenant_id, device_id_hash)"
                 + " ON DELETE CASCADE ON UPDATE CASCADE"
                 + ");";
     }
@@ -138,7 +144,8 @@ public class PasswordlessQueries {
 
     public static String getQueryToCreateDevicePhoneNumberIndex(Start start) {
         return "CREATE INDEX passwordless_devices_phone_number_index ON "
-                + Config.getConfig(start).getPasswordlessDevicesTable() + " (app_id, tenant_id, phone_number);"; // USING hash
+                + Config.getConfig(start).getPasswordlessDevicesTable() +
+                " (app_id, tenant_id, phone_number);"; // USING hash
     }
 
     public static String getQueryToCreateCodeDeviceIdHashIndex(Start start) {
@@ -151,8 +158,10 @@ public class PasswordlessQueries {
                 + Config.getConfig(start).getPasswordlessCodesTable() + "(app_id, tenant_id, created_at);";
     }
 
-    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email, String phoneNumber, String linkCodeSalt,
-                                            PasswordlessCode code) throws StorageTransactionLogicException, StorageQueryException {
+    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email,
+                                            String phoneNumber, String linkCodeSalt,
+                                            PasswordlessCode code)
+            throws StorageTransactionLogicException, StorageQueryException {
         start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
             try {
@@ -197,7 +206,8 @@ public class PasswordlessQueries {
     }
 
     public static void incrementDeviceFailedAttemptCount_Transaction(Start start, Connection con,
-                                                                     TenantIdentifier tenantIdentifier, String deviceIdHash)
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "UPDATE " + getConfig(start).getPasswordlessDevicesTable()
                 + " SET failed_attempts = failed_attempts + 1"
@@ -210,7 +220,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND device_id_hash = ?";
@@ -221,7 +232,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con,
+                                                              TenantIdentifier tenantIdentifier,
+                                                              @Nonnull String phoneNumber)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -234,7 +247,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String phoneNumber, String userId)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                              @Nonnull String phoneNumber, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -251,7 +265,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                        @Nonnull String email)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -264,7 +279,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String email, String userId)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        @Nonnull String email, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -281,7 +297,8 @@ public class PasswordlessQueries {
         });
     }
 
-    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, PasswordlessCode code)
+    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                               PasswordlessCode code)
             throws SQLException, StorageQueryException {
         String QUERY = "INSERT INTO " + getConfig(start).getPasswordlessCodesTable()
                 + "(app_id, tenant_id, code_id, device_id_hash, link_code_hash, created_at)"
@@ -311,7 +328,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con,
+                                                                  TenantIdentifier tenantIdentifier,
+                                                                  String deviceIdHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -335,7 +354,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con,
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String linkCodeHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -354,7 +375,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String codeId)
+    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                              String codeId)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -366,30 +388,35 @@ public class PasswordlessQueries {
         });
     }
 
-    public static UserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined)
+    public static AuthRecipeUserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email,
+                                                @Nullable String phoneNumber, long timeJoined)
             throws StorageTransactionLogicException, StorageQueryException {
         return start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
             try {
                 { // app_id_to_user_id
                     String QUERY = "INSERT INTO " + getConfig(start).getAppIdToUserIdTable()
-                            + "(app_id, user_id, recipe_id)" + " VALUES(?, ?, ?)";
+                            + "(app_id, user_id, primary_or_recipe_user_id, recipe_id)" + " VALUES(?, ?, ?, ?)";
                     update(sqlCon, QUERY, pst -> {
                         pst.setString(1, tenantIdentifier.getAppId());
                         pst.setString(2, id);
-                        pst.setString(3, PASSWORDLESS.toString());
+                        pst.setString(3, id);
+                        pst.setString(4, PASSWORDLESS.toString());
                     });
                 }
 
                 { // all_auth_recipe_users
                     String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                            + "(app_id, tenant_id, user_id, recipe_id, time_joined)" + " VALUES(?, ?, ?, ?, ?)";
+                            + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, recipe_id, time_joined, primary_or_recipe_user_time_joined)" +
+                            " VALUES(?, ?, ?, ?, ?, ?, ?)";
                     update(sqlCon, QUERY, pst -> {
                         pst.setString(1, tenantIdentifier.getAppId());
                         pst.setString(2, tenantIdentifier.getTenantId());
                         pst.setString(3, id);
-                        pst.setString(4, PASSWORDLESS.toString());
-                        pst.setLong(5, timeJoined);
+                        pst.setString(4, id);
+                        pst.setString(5, PASSWORDLESS.toString());
+                        pst.setLong(6, timeJoined);
+                        pst.setLong(7, timeJoined);
                     });
                 }
 
@@ -417,16 +444,20 @@ public class PasswordlessQueries {
                         pst.setString(5, phoneNumber);
                     });
                 }
-                UserInfo userInfo = userInfoWithTenantIds_transaction(start, sqlCon, new UserInfoPartial(id, email, phoneNumber, timeJoined));
+                UserInfoPartial userInfo = new UserInfoPartial(id, email, phoneNumber, timeJoined);
+                fillUserInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
+                fillUserInfoWithVerified_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
                 sqlCon.commit();
-                return userInfo;
+                return AuthRecipeUserInfo.create(id, false,
+                        userInfo.toLoginMethod());
             } catch (SQLException throwables) {
                 throw new StorageTransactionLogicException(throwables);
             }
         });
     }
 
-    private static UserInfoWithTenantId[] getUserInfosWithTenant(Start start, Connection con, AppIdentifier appIdentifier, String userId)
+    private static UserInfoWithTenantId[] getUserInfosWithTenant_Transaction(Start start, Connection con,
+                                                                 AppIdentifier appIdentifier, String userId)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
                 + "pl_users.phone_number as phone_number, pl_users_to_tenant.tenant_id as tenant_id "
@@ -453,49 +484,59 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteUser(Start start, AppIdentifier appIdentifier, String userId)
-            throws StorageQueryException, StorageTransactionLogicException {
-        start.startTransaction(con -> {
-            Connection sqlCon = (Connection) con.getConnection();
-            try {
-                UserInfoWithTenantId[] userInfos = getUserInfosWithTenant(start, sqlCon, appIdentifier, userId);
+    public static void deleteUser_Transaction(Connection sqlCon, Start start, AppIdentifier appIdentifier,
+                                              String userId, boolean deleteUserIdMappingToo)
+            throws StorageQueryException, SQLException {
+        UserInfoWithTenantId[] userInfos = getUserInfosWithTenant_Transaction(start, sqlCon, appIdentifier, userId);
 
-                {
-                    String QUERY = "DELETE FROM " + getConfig(start).getAppIdToUserIdTable()
-                            + " WHERE app_id = ? AND user_id = ?";
+        if (deleteUserIdMappingToo) {
+            String QUERY = "DELETE FROM " + getConfig(start).getAppIdToUserIdTable()
+                    + " WHERE app_id = ? AND user_id = ?";
 
-                    update(sqlCon, QUERY, pst -> {
-                        pst.setString(1, appIdentifier.getAppId());
-                        pst.setString(2, userId);
-                    });
-                }
-
-                for (UserInfoWithTenantId userInfo : userInfos) {
-                    if (userInfo.email != null) {
-                        deleteDevicesByEmail_Transaction(start, sqlCon,
-                                new TenantIdentifier(
-                                        appIdentifier.getConnectionUriDomain(), appIdentifier.getAppId(),
-                                        userInfo.tenantId),
-                                userInfo.email);
-                    }
-                    if (userInfo.phoneNumber != null) {
-                        deleteDevicesByPhoneNumber_Transaction(start, sqlCon,
-                                new TenantIdentifier(
-                                        appIdentifier.getConnectionUriDomain(), appIdentifier.getAppId(),
-                                        userInfo.tenantId),
-                                userInfo.phoneNumber);
-                    }
-                }
-
-                sqlCon.commit();
-            } catch (SQLException throwables) {
-                throw new StorageTransactionLogicException(throwables);
+            update(sqlCon, QUERY, pst -> {
+                pst.setString(1, appIdentifier.getAppId());
+                pst.setString(2, userId);
+            });
+        } else {
+            {
+                String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
+                        + " WHERE app_id = ? AND user_id = ?";
+                update(sqlCon, QUERY, pst -> {
+                    pst.setString(1, appIdentifier.getAppId());
+                    pst.setString(2, userId);
+                });
             }
-            return null;
-        });
+
+            {
+                String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessUsersTable()
+                        + " WHERE app_id = ? AND user_id = ?";
+                update(sqlCon, QUERY, pst -> {
+                    pst.setString(1, appIdentifier.getAppId());
+                    pst.setString(2, userId);
+                });
+            }
+        }
+
+        for (UserInfoWithTenantId userInfo : userInfos) {
+            if (userInfo.email != null) {
+                deleteDevicesByEmail_Transaction(start, sqlCon,
+                        new TenantIdentifier(
+                                appIdentifier.getConnectionUriDomain(), appIdentifier.getAppId(),
+                                userInfo.tenantId),
+                        userInfo.email);
+            }
+            if (userInfo.phoneNumber != null) {
+                deleteDevicesByPhoneNumber_Transaction(start, sqlCon,
+                        new TenantIdentifier(
+                                appIdentifier.getConnectionUriDomain(), appIdentifier.getAppId(),
+                                userInfo.tenantId),
+                        userInfo.phoneNumber);
+            }
+        }
     }
 
-    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String email)
+    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                  String userId, String email)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -519,7 +560,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String phoneNumber)
+    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        String userId, String phoneNumber)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -562,7 +604,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier,
+                                                         @Nonnull String email)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT device_id_hash, email, phone_number, link_code_salt, failed_attempts FROM "
                 + getConfig(start).getPasswordlessDevicesTable()
@@ -609,7 +652,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier,
+                                                      String deviceIdHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -617,7 +661,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time) throws StorageQueryException, SQLException {
+    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND created_at < ?";
@@ -639,7 +684,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId) throws StorageQueryException, SQLException {
+    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -656,7 +702,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier,
+                                                         String linkCodeHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -664,27 +711,22 @@ public class PasswordlessQueries {
         }
     }
 
-    public static List<UserInfo> getUsersByIdList(Start start, List<String> ids)
+    public static List<LoginMethod> getUsersInfoUsingIdList(Start start, Set<String> ids,
+                                                            AppIdentifier appIdentifier)
             throws SQLException, StorageQueryException {
         if (ids.size() > 0) {
             // No need to filter based on tenantId because the id list is already filtered for a tenant
-            StringBuilder QUERY = new StringBuilder("SELECT user_id, email, phone_number, time_joined "
-                    + "FROM " + getConfig(start).getPasswordlessUsersTable());
-            QUERY.append(" WHERE user_id IN (");
-            for (int i = 0; i < ids.size(); i++) {
-                QUERY.append("?");
-                if (i != ids.size() - 1) {
-                    // not the last element
-                    QUERY.append(",");
-                }
-            }
-            QUERY.append(")");
+            String QUERY = "SELECT user_id, email, phone_number, time_joined "
+                    + "FROM " + getConfig(start).getPasswordlessUsersTable() + " WHERE user_id IN (" +
+                    Utils.generateCommaSeperatedQuestionMarks(ids.size()) + ") AND app_id = ?";
 
-            List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-                for (int i = 0; i < ids.size(); i++) {
-                    // i+1 cause this starts with 1 and not 0
-                    pst.setString(i + 1, ids.get(i));
+            List<UserInfoPartial> userInfos = execute(start, QUERY, pst -> {
+                int index = 1;
+                for (String id : ids) {
+                    pst.setString(index, id);
+                    index++;
                 }
+                pst.setString(index, appIdentifier.getAppId());
             }, result -> {
                 List<UserInfoPartial> finalResult = new ArrayList<>();
                 while (result.next()) {
@@ -692,32 +734,50 @@ public class PasswordlessQueries {
                 }
                 return finalResult;
             });
-            return userInfoWithTenantIds(start, userInfos);
+            fillUserInfoWithTenantIds(start, appIdentifier, userInfos);
+            fillUserInfoWithVerified(start, appIdentifier, userInfos);
+            return userInfos.stream().map(UserInfoPartial::toLoginMethod).collect(Collectors.toList());
         }
         return Collections.emptyList();
     }
 
-    public static UserInfo getUserById(Start start, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
-        String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
-                + getConfig(start).getPasswordlessUsersTable() + " WHERE app_id = ? AND user_id = ?";
+    public static List<LoginMethod> getUsersInfoUsingIdList_Transaction(Start start, Connection con, Set<String> ids,
+                                                            AppIdentifier appIdentifier)
+            throws SQLException, StorageQueryException {
+        if (ids.size() > 0) {
+            // No need to filter based on tenantId because the id list is already filtered for a tenant
+            String QUERY = "SELECT user_id, email, phone_number, time_joined "
+                    + "FROM " + getConfig(start).getPasswordlessUsersTable() + " WHERE user_id IN (" +
+                    Utils.generateCommaSeperatedQuestionMarks(ids.size()) + ") AND app_id = ?";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, appIdentifier.getAppId());
-            pst.setString(2, userId);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
-            }
-            return null;
-        });
-        return userInfoWithTenantIds(start, userInfo);
+            List<UserInfoPartial> userInfos = execute(con, QUERY, pst -> {
+                int index = 1;
+                for (String id : ids) {
+                    pst.setString(index, id);
+                    index++;
+                }
+                pst.setString(index, appIdentifier.getAppId());
+            }, result -> {
+                List<UserInfoPartial> finalResult = new ArrayList<>();
+                while (result.next()) {
+                    finalResult.add(UserInfoRowMapper.getInstance().mapOrThrow(result));
+                }
+                return finalResult;
+            });
+            fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+            fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfos);
+            return userInfos.stream().map(UserInfoPartial::toLoginMethod).collect(Collectors.toList());
+        }
+        return Collections.emptyList();
     }
 
-    public static UserInfoPartial getUserById(Start start, Connection sqlCon, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
-        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on app_id_to_user_id table
+    private static UserInfoPartial getUserById_Transaction(Start start, Connection sqlCon, AppIdentifier appIdentifier,
+                                              String userId)
+            throws StorageQueryException, SQLException {
+        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id
+        // table
         String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
-                + getConfig(start).getPasswordlessUsersTable()
-                + " WHERE app_id = ? AND user_id = ?";
+                + getConfig(start).getPasswordlessUsersTable() + " WHERE app_id = ? AND user_id = ?";
 
         return execute(sqlCon, QUERY, pst -> {
             pst.setString(1, appIdentifier.getAppId());
@@ -730,72 +790,164 @@ public class PasswordlessQueries {
         });
     }
 
-    public static UserInfo getUserByEmail(Start start, TenantIdentifier tenantIdentifier, @Nonnull String email)
-            throws StorageQueryException, SQLException {
-        String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
-                + "pl_users.phone_number as phone_number, pl_users.time_joined as time_joined "
-                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
-                + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
-                + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.email = ? ";
+    public static List<String> lockEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                     String email) throws StorageQueryException, SQLException {
+        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on
+        // app_id_to_user_id table
+        String QUERY = "SELECT user_id FROM " + getConfig(start).getPasswordlessUsersTable() +
+                " WHERE app_id = ? AND email = ? FOR UPDATE";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, appIdentifier.getAppId());
+            pst.setString(2, email);
+        }, result -> {
+            List<String> userIds = new ArrayList<>();
+            while (result.next()) {
+                userIds.add(result.getString("user_id"));
+            }
+            return userIds;
+        });
+    }
+
+    public static List<String> lockPhoneAndTenant_Transaction(Start start, Connection con,
+                                                        AppIdentifier appIdentifier,
+                                                        String phoneNumber)
+            throws SQLException, StorageQueryException {
+
+        String QUERY = "SELECT user_id FROM " + getConfig(start).getPasswordlessUsersTable() +
+                " WHERE app_id = ? AND phone_number = ? FOR UPDATE";
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, appIdentifier.getAppId());
+            pst.setString(2, phoneNumber);
+        }, result -> {
+            List<String> userIds = new ArrayList<>();
+            while (result.next()) {
+                userIds.add(result.getString("user_id"));
+            }
+            return userIds;
+        });
+    }
+
+    public static String getPrimaryUserIdUsingEmail(Start start, TenantIdentifier tenantIdentifier,
+                                                     String email)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pless" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.tenant_id = ? AND pless.email = ?";
+
+        return execute(start, QUERY, pst -> {
             pst.setString(1, tenantIdentifier.getAppId());
             pst.setString(2, tenantIdentifier.getTenantId());
             pst.setString(3, email);
         }, result -> {
             if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                return result.getString("user_id");
             }
             return null;
         });
-        return userInfoWithTenantIds(start, userInfo);
     }
 
-    public static UserInfo getUserByPhoneNumber(Start start, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
+    public static List<String> getPrimaryUserIdsUsingEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                     String email)
             throws StorageQueryException, SQLException {
-        String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
-                + "pl_users.phone_number as phone_number, pl_users.time_joined as time_joined "
-                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
-                + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
-                + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.phone_number = ? ";
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUsersTable() + " AS pless" +
+                " JOIN " + getConfig(start).getAppIdToUserIdTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.email = ?";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, appIdentifier.getAppId());
+            pst.setString(2, email);
+        }, result -> {
+            List<String> userIds = new ArrayList<>();
+            while (result.next()) {
+                userIds.add(result.getString("user_id"));
+            }
+            return userIds;
+        });
+    }
+
+    public static String getPrimaryUserByPhoneNumber(Start start, TenantIdentifier tenantIdentifier,
+                                                     @Nonnull String phoneNumber)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pless" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.tenant_id = ? AND pless.phone_number = ?";
+
+        return execute(start, QUERY, pst -> {
             pst.setString(1, tenantIdentifier.getAppId());
             pst.setString(2, tenantIdentifier.getTenantId());
             pst.setString(3, phoneNumber);
         }, result -> {
             if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                return result.getString("user_id");
             }
             return null;
         });
-        return userInfoWithTenantIds(start, userInfo);
     }
 
-    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static List<String> listUserIdsByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                              @Nonnull String phoneNumber)
             throws StorageQueryException, SQLException {
-        UserInfoPartial userInfo = PasswordlessQueries.getUserById(start, sqlCon,
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUsersTable() + " AS pless" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.phone_number = ?";
+
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, appIdentifier.getAppId());
+            pst.setString(2, phoneNumber);
+        }, result -> {
+            List<String> userIds = new ArrayList<>();
+            while (result.next()) {
+                userIds.add(result.getString("user_id"));
+            }
+            return userIds;
+        });
+    }
+
+    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon,
+                                                        TenantIdentifier tenantIdentifier, String userId)
+            throws StorageQueryException, SQLException, UnknownUserIdException {
+        UserInfoPartial userInfo = PasswordlessQueries.getUserById_Transaction(start, sqlCon,
                 tenantIdentifier.toAppIdentifier(), userId);
+
+        if (userInfo == null) {
+            throw new UnknownUserIdException();
+        }
+
+        GeneralQueries.AccountLinkingInfo accountLinkingInfo = GeneralQueries.getAccountLinkingInfo_Transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userId);
 
         { // all_auth_recipe_users
             String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                    + "(app_id, tenant_id, user_id, recipe_id, time_joined)"
-                    + " VALUES(?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
+                    + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, is_linked_or_is_a_primary_user, recipe_id, time_joined, primary_or_recipe_user_time_joined)"
+                    + " VALUES(?, ?, ?, ?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
             update(sqlCon, QUERY, pst -> {
                 pst.setString(1, tenantIdentifier.getAppId());
                 pst.setString(2, tenantIdentifier.getTenantId());
                 pst.setString(3, userInfo.id);
-                pst.setString(4, PASSWORDLESS.toString());
-                pst.setLong(5, userInfo.timeJoined);
+                pst.setString(4, accountLinkingInfo.primaryUserId);
+                pst.setBoolean(5, accountLinkingInfo.isLinked);
+                pst.setString(6, PASSWORDLESS.toString());
+                pst.setLong(7, userInfo.timeJoined);
+                pst.setLong(8, userInfo.timeJoined);
             });
+
+            GeneralQueries.updateTimeJoinedForPrimaryUser_Transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), accountLinkingInfo.primaryUserId);
         }
 
         { // passwordless_user_to_tenant
             String QUERY = "INSERT INTO " + getConfig(start).getPasswordlessUserToTenantTable()
                     + "(app_id, tenant_id, user_id, email, phone_number)"
-                    + " VALUES(?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
+                    + " VALUES(?, ?, ?, ?, ?)" + " ON CONFLICT ON CONSTRAINT "
+                    + Utils.getConstraintName(Config.getConfig(start).getTableSchema(), getConfig(start).getPasswordlessUserToTenantTable(), null, "pkey")
+                    + " DO NOTHING";
 
             int numRows = update(sqlCon, QUERY, pst -> {
                 pst.setString(1, tenantIdentifier.getAppId());
@@ -809,7 +961,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon,
+                                                             TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         { // all_auth_recipe_users
             String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
@@ -827,42 +980,124 @@ public class PasswordlessQueries {
         // automatically deleted from passwordless_user_to_tenant because of foreign key constraint
     }
 
-    private static UserInfo userInfoWithTenantIds(Start start, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithVerified_transaction(Start start,
+                                                                        Connection sqlCon,
+                                                                        AppIdentifier appIdentifier,
+                                                                        UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, Arrays.asList(userInfo)).get(0);
-        }
+        return fillUserInfoWithVerified_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds(Start start, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithVerified_transaction(Start start,
+                                                                              Connection sqlCon,
+                                                                              AppIdentifier appIdentifier,
+                                                                              List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, userInfos);
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.email == null) {
+                // phone number, so we mark it as verified
+                userInfo.verified = true;
+            } else {
+                userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
+            }
         }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified_transaction(start, sqlCon,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.verified != null) {
+                // this means phone number
+                assert (userInfo.email == null);
+                continue;
+            }
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            } else {
+                userInfo.verified = false;
+            }
+        }
+        return userInfos;
     }
 
-    private static UserInfo userInfoWithTenantIds_transaction(Start start, Connection sqlCon, UserInfoPartial userInfo)
+    private static List<UserInfoPartial> fillUserInfoWithVerified(Start start,
+                                                                  AppIdentifier appIdentifier,
+                                                                  List<UserInfoPartial> userInfos)
+            throws SQLException, StorageQueryException {
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.email == null) {
+                // phone number, so we mark it as verified
+                userInfo.verified = true;
+            } else {
+                userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
+            }
+        }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified(start,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.verified != null) {
+                // this means phone number
+                assert (userInfo.email == null);
+                continue;
+            }
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            } else {
+                userInfo.verified = false;
+            }
+        }
+        return userInfos;
+    }
+
+    private static UserInfoPartial fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                         AppIdentifier appIdentifier,
+                                                                         UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        return userInfoWithTenantIds_transaction(start, sqlCon, Arrays.asList(userInfo)).get(0);
+        return fillUserInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds_transaction(Start start, Connection sqlCon, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                               AppIdentifier appIdentifier,
+                                                                               List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
         String[] userIds = new String[userInfos.size()];
         for (int i = 0; i < userInfos.size(); i++) {
             userIds[i] = userInfos.get(i).id;
         }
 
-        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon, userIds);
-        List<UserInfo> result = new ArrayList<>();
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon,
+                appIdentifier,
+                userIds);
+        List<AuthRecipeUserInfo> result = new ArrayList<>();
         for (UserInfoPartial userInfo : userInfos) {
-            result.add(new UserInfo(userInfo.id, userInfo.email, userInfo.phoneNumber, userInfo.timeJoined,
-                    tenantIdsForUserIds.get(userInfo.id).toArray(new String[0])));
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
+        }
+        return userInfos;
+    }
+
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds(Start start,
+                                                                   AppIdentifier appIdentifier,
+                                                                   List<UserInfoPartial> userInfos)
+            throws SQLException, StorageQueryException {
+        String[] userIds = new String[userInfos.size()];
+        for (int i = 0; i < userInfos.size(); i++) {
+            userIds[i] = userInfos.get(i).id;
         }
 
-        return result;
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds(start,
+                appIdentifier,
+                userIds);
+        List<AuthRecipeUserInfo> result = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
+        }
+        return userInfos;
     }
 
     private static class PasswordlessDeviceRowMapper implements RowMapper<PasswordlessDevice, ResultSet> {
@@ -905,6 +1140,9 @@ public class PasswordlessQueries {
         public final long timeJoined;
         public final String email;
         public final String phoneNumber;
+        public String[] tenantIds;
+        public Boolean verified;
+        public Boolean isPrimary;
 
         UserInfoPartial(String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined) {
             this.id = id.trim();
@@ -916,6 +1154,13 @@ public class PasswordlessQueries {
 
             this.email = email;
             this.phoneNumber = phoneNumber;
+        }
+
+        public LoginMethod toLoginMethod() {
+            assert (tenantIds != null);
+            assert (verified != null);
+            return new LoginMethod(id, timeJoined, verified, new LoginMethod.PasswordlessInfo(email, phoneNumber),
+                    tenantIds);
         }
     }
 
@@ -935,7 +1180,6 @@ public class PasswordlessQueries {
                     result.getString("phone_number"), result.getLong("time_joined"));
         }
     }
-
 
     private static class UserInfoWithTenantId {
         public final String userId;
